// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow styles override 1`] = `
.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-right: 0.5rem;
}

.emotion-3 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #ECF0FF;
  color: #0069D0;
  border-color: #0069D0;
  color: red;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: blue;
}

<div>
  <div
    class="emotion-3"
    role="alert"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <defs>
          <path
            d="M10 0c5.523 0 10 4.478 10 10 0 5.523-4.477 10-10 10S0 15.523 0 10C0 4.478 4.477 0 10 0zm-.004 9c-.669 0-1.001.292-.996.875v5.25c-.002.583.33.875.998.875.668 0 1.002-.292 1.002-.875v-5.25C11 9.292 10.665 9 9.996 9zM10 4a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
            id="info-circle-filled_svg__a"
          />
        </defs>
        <use
          transform="translate(2 2)"
          xlink:href="#info-circle-filled_svg__a"
        />
      </svg>
      <div
        class="emotion-1"
      >
        Information.
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  margin-left: auto;
  padding-left: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #ECF0FF;
  color: #0069D0;
  border-color: #0069D0;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
  margin-right: 0.5rem;
}

.emotion-3 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-3 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-3:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-13 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #E1F6DF;
  color: #217B00;
  border-color: #217B00;
}

.emotion-20 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #FFECE8;
  color: #AD5000;
  border-color: #AD5000;
}

.emotion-27 {
  padding: 0 1rem;
  min-height: 2.5rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #FEECED;
  color: #D01E29;
  border-color: #D01E29;
}

<div>
  <div>
    <div
      class="emotion-6"
      role="alert"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M10 0c5.523 0 10 4.478 10 10 0 5.523-4.477 10-10 10S0 15.523 0 10C0 4.478 4.477 0 10 0zm-.004 9c-.669 0-1.001.292-.996.875v5.25c-.002.583.33.875.998.875.668 0 1.002-.292 1.002-.875v-5.25C11 9.292 10.665 9 9.996 9zM10 4a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
              id="info-circle-filled_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#info-circle-filled_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Information.
        </div>
        <span
          class="emotion-4"
        >
          <button
            aria-label="Close"
            class="emotion-3"
            title="Close"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class="emotion-2"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="emotion-13"
      role="alert"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M10 0c5.523 0 10 4.477 10 10 0 5.522-4.477 10-10 10S0 15.522 0 10C0 4.477 4.477 0 10 0zm4.708 6.293a1 1 0 00-1.414 0l-5.293 5.293-2.294-2.294a1 1 0 10-1.414 1.414l3.001 3.001a1 1 0 001.414 0l6-6a1 1 0 000-1.414z"
              id="check-circle-filled_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#check-circle-filled_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Success message.
        </div>
        <span
          class="emotion-4"
        >
          <button
            aria-label="Close"
            class="emotion-3"
            title="Close"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class="emotion-2"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="emotion-20"
      role="alert"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M10.854.504l.068.118 8.911 17.354c.433.841-.024 1.925-.812 2.017l-.11.007H1.09c-.818 0-1.33-1.047-.976-1.908l.053-.116L9.078.622c.405-.788 1.32-.827 1.776-.118zM10 15a1.5 1.5 0 100 3 1.5 1.5 0 000-3zm0-9c-.666 0-1 .291-1 .875v5.25c0 .583.334.875 1 .875.667 0 1-.292 1-.875v-5.25C11 6.29 10.667 6 10 6z"
              id="exclamation-triangle-filled_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#exclamation-triangle-filled_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Alert message.
        </div>
        <span
          class="emotion-4"
        >
          <button
            aria-label="Close"
            class="emotion-3"
            title="Close"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class="emotion-2"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="emotion-27"
      role="alert"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M18 10a7.948 7.948 0 01-1.688 4.897L5.103 3.688A7.954 7.954 0 0110 2c4.411 0 8 3.589 8 8M2 10c0-1.846.634-3.542 1.688-4.897l11.209 11.209A7.954 7.954 0 0110 18c-4.411 0-8-3.589-8-8m-2 0c0 5.514 4.486 10 10 10s10-4.486 10-10S15.514 0 10 0 0 4.486 0 10"
              id="ban-outline_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#ban-outline_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Error message.
        </div>
        <span
          class="emotion-4"
        >
          <button
            aria-label="Close"
            class="emotion-3"
            title="Close"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class="emotion-2"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly when inline 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  padding: 0.375rem 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #ECF0FF;
  color: #0069D0;
  border-color: #0069D0;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1rem;
  margin-right: 0.5rem;
}

.emotion-7 {
  padding: 0.375rem 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #E1F6DF;
  color: #217B00;
  border-color: #217B00;
}

.emotion-11 {
  padding: 0.375rem 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #FFECE8;
  color: #AD5000;
  border-color: #AD5000;
}

.emotion-15 {
  padding: 0.375rem 0.5rem;
  min-height: 2rem;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  background: #FEECED;
  color: #D01E29;
  border-color: #D01E29;
}

<div>
  <div>
    <div
      class="emotion-3"
      role="alert"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M10 0c5.523 0 10 4.478 10 10 0 5.523-4.477 10-10 10S0 15.523 0 10C0 4.478 4.477 0 10 0zm-.004 9c-.669 0-1.001.292-.996.875v5.25c-.002.583.33.875.998.875.668 0 1.002-.292 1.002-.875v-5.25C11 9.292 10.665 9 9.996 9zM10 4a1.5 1.5 0 100 3 1.5 1.5 0 000-3z"
              id="info-circle-filled_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#info-circle-filled_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Information.
        </div>
      </div>
    </div>
    <div
      class="emotion-7"
      role="alert"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M10 0c5.523 0 10 4.477 10 10 0 5.522-4.477 10-10 10S0 15.522 0 10C0 4.477 4.477 0 10 0zm4.708 6.293a1 1 0 00-1.414 0l-5.293 5.293-2.294-2.294a1 1 0 10-1.414 1.414l3.001 3.001a1 1 0 001.414 0l6-6a1 1 0 000-1.414z"
              id="check-circle-filled_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#check-circle-filled_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Success message.
        </div>
      </div>
    </div>
    <div
      class="emotion-11"
      role="alert"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M10.854.504l.068.118 8.911 17.354c.433.841-.024 1.925-.812 2.017l-.11.007H1.09c-.818 0-1.33-1.047-.976-1.908l.053-.116L9.078.622c.405-.788 1.32-.827 1.776-.118zM10 15a1.5 1.5 0 100 3 1.5 1.5 0 000-3zm0-9c-.666 0-1 .291-1 .875v5.25c0 .583.334.875 1 .875.667 0 1-.292 1-.875v-5.25C11 6.29 10.667 6 10 6z"
              id="exclamation-triangle-filled_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#exclamation-triangle-filled_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Alert message.
        </div>
      </div>
    </div>
    <div
      class="emotion-15"
      role="alert"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
        >
          <defs>
            <path
              d="M18 10a7.948 7.948 0 01-1.688 4.897L5.103 3.688A7.954 7.954 0 0110 2c4.411 0 8 3.589 8 8M2 10c0-1.846.634-3.542 1.688-4.897l11.209 11.209A7.954 7.954 0 0110 18c-4.411 0-8-3.589-8-8m-2 0c0 5.514 4.486 10 10 10s10-4.486 10-10S15.514 0 10 0 0 4.486 0 10"
              id="ban-outline_svg__a"
            />
          </defs>
          <use
            transform="translate(2 2)"
            xlink:href="#ban-outline_svg__a"
          />
        </svg>
        <div
          class="emotion-1"
        >
          Error message.
        </div>
      </div>
    </div>
  </div>
</div>
`;
